--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,4 @@
 MONGO_URI= "mongodb+srv://pheonix:pheonix123@cluster0.gnlu2.mongodb.net/"
 # TOKEN_SECRET= chaiaurcode
 TOKEN_SECRET= nextjsauth
-DOMAIN=http://localhost:3000
+DOMAIN=https://next-auth-site.netlify.app/login
